--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 
     <!-- THE FOOTER + NAV BAR -------------------------------------------------------------------->
     <header>
-        <img class="logo" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRA9N-Prtaf6lKJxQb1-HzUwrv6-qvV_lr0xQ&s">
-        <!-- <a href="#" class="travel">TRAVEL AND SWAG</a> -->
+        <h3 class="logo">PERIPATETIC</h3>
         
         <div class="menu"> 
             <div class="btn">
@@ -33,11 +32,14 @@
     </header>
 
     <section class="section-main">
-        <h1>TRAVEL AND SWAG</h1>
+        <h1>HODOPHILES</h1>
+
+
+
     </section>
 
     <section class="section-two">
-        <h2>HODOPHILES</h2>
+        
         <p> The term originates from the Greek word 
             "hodós," meaning path or journey, combined with "-phile," indicating love 
             or affinity for something.<br> 
@@ -201,7 +203,7 @@
           <p id="q">What can be better than an opinion of an Experienced..<br>Let's know the world from a different perspective</p>
 
           <div class="row">
-            <div class="testimonial-col">
+            <div class="testimonials-col">
               <img src="https://t4.ftcdn.net/jpg/03/83/25/83/360_F_383258331_D8imaEMl8Q3lf7EKU2Pi78Cn0R7KkW9o.jpg">
               <div>
                 <p>To make your trip planning as easy as possible.<br> We make sure that you enjoy your trip with full SWAG..</p>
@@ -214,7 +216,7 @@
               </div>
             </div>
           </div>
-          <a href="" id="hero-btn">Check out are AESTHETICS to know more!!!</a> <!-- TAKE THIS TO THE VERY BOTTOM -->
+          <a href="" class="hero-btn">Check out our AESTHETICS to know more!!!</a> <!-- TAKE THIS TO THE VERY BOTTOM -->
         </div>
 
       </div>
